bootstrap/net-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: net-test
  namespace: sandbox
spec:
  containers:
  - name: net-test
    image: praqma/network-multitool   # includes curl, dig, nslookup, wget, ping, etc.
    command: ["/bin/sh", "-c", "sleep infinity"]
