bootstrap/coredns-tailscale-entrypoint.yaml
apiVersion: v1
kind: Service
metadata:
  name: coredns-tailscale
  namespace: kube-system
spec:
  type: NodePort
  selector:
    k8s-app: kube-dns
  ports:
    - name: dns-udp
      protocol: UDP
      port: 53
      targetPort: 53
      nodePort: 3053
    - name: dns-tcp
      protocol: TCP
      port: 53
      targetPort: 53
      nodePort: 3053
