bootstrap/argo-cd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: argocd-ingress
    namespace: argocd
    annotations:
        cert-manager.io/cluster-issuer: homelab-ca-issuer
spec:
    rules:
        - host: argo-cd.nkaewam.local
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: argocd-server
                            port:
                                number: 80

    tls:
        - hosts:
              - argo-cd.nkaewam.local
          secretName: argo-cd-tls
